@startuml
'https://plantuml.com/class-diagram

class Ship {
    #String shipName
    #String yearBuilt

    +String getShipName()
    +void setShipName(String shipName)
    +String getYearBuilt()
    +void setYearBuilt(String yearBuilt)
    +String toString()
    +void printShip()
}

class CruiseShip {
    int cargoCapacityInTonnage

    +int getCargoCapacityInTonnage()
    +void setCargoCapacityInTonnage(int cargoCapacityInTonnage)
    +String toString()
}

class CargoShip {
    int maxNumberPassengers

    +int getMaxNumberPassengers()
    +void setMaxNumberPassengers(int maxNumberPassengers)
    +String toString()
}

Ship <|-- CruiseShip
Ship <|-- CargoShip

@enduml